--- a/5/css/style.css
+++ b/5/css/style.css
@@ -18,18 +18,18 @@
 
 @font-face {
     font-family: "Cuprum";
-    src: url(../fonts/cuprumbolditalic.woff2) format("woff2"),
-    url(../fonts/cuprumbolditalic.woff) format("woff");
-    font-weight: 700;
-    font-style: italic;    
-}
-
-@font-face {
-    font-family: "Cuprum";
     src: url(../fonts/cuprumitalic.woff2) format("woff2"),
     url(../fonts/cuprumitalic.woff) format("woff");
     font-weight: 400;
     font-style: italic;
+}
+
+@font-face {
+    font-family: "Cuprum";
+    src: url(../fonts/cuprumbolditalic.woff2) format("woff2"),
+    url(../fonts/cuprumbolditalic.woff) format("woff");
+    font-weight: 700;
+    font-style: italic;    
 }
 
 @font-face {
@@ -44,6 +44,8 @@
     font-family: "PT Sans";
     src: url(../fonts/ptsansbold.woff2) format("woff2"),
     url(../fonts/ptsansbold.woff) format("woff");
+    font-weight: 700;
+    font-style: normal;
 }
 
 /* Variables */
@@ -101,7 +103,8 @@ img {
 
 /* Main header */
 
-.main-header {
+.main-header,
+.services {
     background-color: var(--special-light);
 }
 
@@ -114,12 +117,18 @@ img {
 }
 
 .header-menu,
-.search {
+.search,
+.footer-wrap {
     background-color: var(--basic-extra-blue);
 }
 
-.main-header-logo {
+.logo {
     background-color: var(--basic-red);
+    color: inherit;
+}
+
+.logo:focus {
+    background-color: var(--special-red);
 }
 
 .order-button {
@@ -174,39 +183,55 @@ img {
     color: var(--basic-blue);
 }
 
-.user-navigation a {
+.user-link {
     font-size: 21px;
     line-height: 21px;
     color: var(--basic-black);
     background-color: var(--basic-white)
 }
 
-.user-navigation a:hover {
+.user-link a:hover {
     color: var(--basic-red);
 }
 
-.user-navigation a:focus {
+.user-link a:focus {
     color: var(--special-light-grey);
+}
+
+.cart.not-empty-cart {
+    background-color: var(--basic-red);
+}
+
+.user-navigation a:not(.user-link) {
+    font-size: 16px;
+    line-height: 18px;
+    color: var(--basic-blue);
 }
 
 
 /* site navigation */
 
-.site-navigation {
-    background-color: var(--basic-blue);    
+.site-navigation,
+.main-footer {
+    background-color: var(--basic-blue);
+       
+}
 
-    list-style: none;
+.site-navigation,
+.footer-navigation-list,
+.footer-services-list {
+    list-style: none; 
 }
 
 .site-navigation a {
-    color: var(--basic-white);
+    color: inherit;    
 }
 
-.site-navigation a:hover {
+.main-navigation a:hover {
     background-color: var(--basic-extra-blue);
 }
 
-.site-navigation a:focus {
+.main-navigation a:focus {
     color: rgba(255, 255, 255, 0.5);
     background-color: var(--extradark-blue);
 }
@@ -217,6 +242,8 @@ img {
     font-size: 24px;
     font-weight: bold;
     line-height: 30px;
+    width: 300px;
+    height: 123px;
 }
 
 .promo-item:nth-of-type(1),
@@ -302,11 +329,13 @@ img {
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
+    color: var(--basic-blue);
 }
 
-.popular-manufacturers .title,
-.popular-items .title {
-    color: var(--basic-blue);
+.services-title,
+.company-title,
+.contacts-title {
+    color: var(--basic-black);
 }
 
 .popular-title-wrap {
@@ -341,4 +370,85 @@ img {
     font-size: 17px;
     line-height: 18px;
     text-transform: uppercase;
+}
+
+/* сервисы */
+
+.slogan {
+    font-family: "PT Sans";
+    font-size: 13px;
+    color: var(--basic-black);
+}
+
+.services-buttons button {
+    background-color: var(--basic-blue);
+    color: var(--basic-white);
+    font-size: 21px;
+    line-height: 30px;
+    font-weight: bold;
+}
+
+.services-buttons button:hover {
+    background-color: var(--basic-extra-blue);
+}
+
+.services-buttons button:focus {
+    background-color: var(--basic-white);
+    color: var(--basic-blue);
+}
+
+/* компания */
+
+.company-item {
+    color: var(--basic-black);
+}
+
+.inner-page {
+    color: var(--basic-black);
+    font-family: "PT Sans", Arial, sans-serif;
+    line-height: 18px;
+}
+
+/* футер */
+
+.footer-navigation-list a {
+    color: var(--special-light);
+}
+
+.footer-navigation-list a:hover,
+.footer-services-list a:hover,
+.footer-links a:hover {
+    text-decoration: underline;
+}
+
+.footer-navigation-list a:focus {
+    color: rgba(241,245,247,0.5)
+}
+
+.footer-address a {
+    color: var(--basic-extra-light);
+}
+
+.footer-services-list a {
+    color: var(--basic-light-yellow);
+}
+
+.footer-services-list a:focus {
+    color: rgba(255,209,128, 0.5);
+}
+
+.footer-social ul {
+    list-style: none;    
+}
+
+.footer-social a {
+    color: inherit;
+}
+
+.footer-links a:not(.logo) {
+    color: var(--basic-light-yellow)
+}
+
+.footer-links a:not(.logo):focus {
+    color: var(--basic-red);
 }
