--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@
 
 /* Global */
 
-body {
+.page-body {
     min-width: 960px;
     margin: 0;
     padding: 0;
@@ -90,7 +90,12 @@ body {
     line-height: 24px;
     font-weight: 400;
     color: var(--basic-white);
-    background-color: var(--basic-white);    
+    background-color: var(--basic-white);
+    
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
 }
 
 a {
@@ -102,9 +107,109 @@ img {
     height: auto;
 }
 
+/* Grid */
+
+.page {
+    height: 100%;
+}
+
+
 /* Main header */
 
-.main-header,
+
+.header-menu-bar {
+    background-color: var(--basic-extra-blue);
+}
+
+.header-menu {
+    display: grid;
+    width: 940px;    
+    height: 42px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 12fr;
+}
+
+.main-header-logo {
+    grid-column: 1/4;
+    width: 220px;
+}
+
+.search-form {
+    grid-column: 4/7;
+}
+
+.menu-button-wrap {
+    grid-column: 7/11;
+}
+
+.order-button {
+    grid-column: 11/13;
+}
+
+.header-navigation-bar {
+    background-color: var(--special-light);
+    padding-bottom: 60px;
+}
+
+.user-menu {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 12fr;
+}
+
+.logo-text {
+    grid-column: 1/5;
+}
+
+.header-contacts {
+    grid-column: 5/9;
+}
+
+.user-navigation {
+    grid-column: 9/13;
+}
+
+.site-navigation {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 12fr;
+}
+
+.promo-list {
+    display: grid;
+    width: 940px;
+    height: 409px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 4fr 4fr 4fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-top: 60px;
+}
+
+.perforators {
+    grid-row: 2/4;
+    grid-column: 1/9;
+}
+
+.promo-item:nth-of-type(5) {
+    grid-row: -2/-1;
+    grid-column: 3/4;
+}
+
+.promo-item:nth-of-type(4) {
+    grid-column: 3/4;
+    grid-row: 2/3; 
+}
+
+
+
+
 .services,
 .inner-page .title,
 .perforator-info {
@@ -119,9 +224,7 @@ img {
     color: var(--basic-white);    
 }
 
-.header-menu,
-.search,
-.footer-wrap {
+.search {
     background-color: var(--basic-extra-blue);
 }
 
@@ -186,18 +289,18 @@ img {
     color: var(--basic-blue);
 }
 
-.user-link {
+.user-navigation .user-link {
     font-size: 21px;
     line-height: 21px;
     color: var(--basic-black);
     background-color: var(--basic-white)
 }
 
-.user-link a:hover {
+.user-link:hover {
     color: var(--basic-red);
 }
 
-.user-link a:focus {
+.user-link:focus {
     color: var(--special-light-grey);
 }
 
@@ -221,6 +324,7 @@ img {
 }
 
 .site-navigation,
+.promo-list,
 .footer-navigation-list,
 .footer-services-list {
     list-style: none; 
@@ -282,7 +386,7 @@ img {
     background-color: rgba(169, 169, 169, 0.3);
 }
 
-.slider {
+.slider-title {
     font-size: 36px;
     line-height: 36px;
     text-transform: uppercase;    
@@ -298,6 +402,7 @@ img {
     background: #DEB887 url("../img/drills.jpg") no-repeat;
     width: 620px;
     height: 266px;
+    display: none;
 }
 
 .slider p {
@@ -334,6 +439,7 @@ img {
     text-transform: uppercase;
     color: var(--basic-blue);
     font-family: "Cuprum", Arial, sans-serif;
+    font-weight: normal;
 }
 
 .services-title,
@@ -341,19 +447,52 @@ img {
 .contacts-title,
 .perforator-info .title {
     color: var(--basic-black);
+    font-weight: normal;
 }
+
+
+/* популярные товары */
 
 .popular-title-wrap {
     background-color: var(--special-light-beige);
+
+    width: 940px;
+    display: grid;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 1fr min-content;
+    margin-bottom: 20px;
 }
 
-/* популярные товары */
+.popular-title-wrap .button {
+    width: 192px;
+    height: 38px;
+}
+
+.popular-items-list {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 220px 220px 220px 220px;
+}
+
+.popular-manufacturers-list {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    gap: 20px;
+    grid-template-columns: 220px 220px 220px 220px;
+    grid-template-rows: 145px 145px;
+}
 
 .catalog-item {
     font-family: "PT Sans", "Arial", sans-serif;
     font-weight: bold;
     text-align: center;
 }
+
 
 .catalog-item p {
     color: var(--basic-black);
@@ -442,6 +581,41 @@ img {
 
 /* сервисы */
 
+.services {
+    padding-top: 60px;
+}
+
+.services-bar {
+    background-color: var(--special-light);
+}
+
+.services-head {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    
+}
+
+.services-menu {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: min-content auto;
+    margin-top: 60px;
+}
+
+.services-buttons {
+    display: grid;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 240px;
+    grid-template-rows: 61px 61px 61px;
+    margin-right: 50px;
+
+}
+
+
 .slogan,
 .perforator-info-text {
     font-family: "PT Sans";
@@ -476,6 +650,17 @@ img {
     color: var(--basic-black);
     font-family: "PT Sans", Arial, sans-serif;
     line-height: 18px;
+}
+
+.company-contacts-wrap {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 1fr 300px;
+    margin-top: 70px;
+    column-gap: 180px;
+    margin-bottom: 70px;
 }
 
 /* хлебные крошки */
@@ -525,7 +710,7 @@ img {
 .filter-title {    
     font-size: 17px;
     line-height: 30px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .manufacturers-filter,
@@ -536,6 +721,30 @@ img {
 }
 
 /* футер */
+
+.footer-navigation,
+.footer-address {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.footer-bar {
+    background-color: var(--basic-blue);
+}
+
+.footer-social-bar {
+    background-color: var(--basic-extra-blue);
+}
+
+.footer-copyright {
+    display: grid;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 
 .footer-navigation-list a {
     color: var(--special-light);
@@ -578,3 +787,9 @@ img {
 .footer-links a:not(.logo):focus {
     color: var(--basic-red);
 }
+
+.hidden {
+    visibility: hidden;
+}
+
+
