--- a/css/style.css
+++ b/css/style.css
@@ -107,23 +107,27 @@ img {
 
 /* Main header */
 
+.center {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
 .header-menu-bar {
     background-color: var(--basic-extra-blue);
+    width: 100%;
+    border-bottom: 5px solid var(--special-light);
 }
 
 .header-menu {
     display: flex;
-    width: 940px;
-    height: 42px;
-    margin: 0 auto;
-    padding: 0 10px;
     justify-content: space-between;
+    height: 42px;
 }
 
 .main-header-logo {
     width: 220px;
     height: 47px;
-    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
 }
 
 /*.search-form {
@@ -137,44 +141,53 @@ img {
 
 .header-navigation-bar {
     background-color: var(--special-light);
+    width: 100%;
     padding-bottom: 60px;
 }
 
 .user-menu {
-    display: grid;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
-    grid-template-columns: 2fr 2fr 1fr;
+    display: flex;
+    height: 153px;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/* .logo-text {
-}
 
 .header-contacts {
+    width: 270px;
 }
 
 .user-navigation {
-} */
-
-.site-navigation {
     display: flex;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
+    width: 320px;
+    justify-content: space-between;
+}
+
+.header-navigation {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    display: flex;
     justify-content: space-around;
+    align-items: center;
+    min-height: 60px;
+    box-shadow: inset 0px -5px 0px #293449;
+    margin-bottom: 60px;
+    
 }
 
 .promo-list {
     display: grid;
-    width: 940px;
     height: 409px;
-    margin: 0 auto;
-    padding: 0 10px;
     grid-template-columns: 300px 300px 300px;
     grid-template-rows: 123px 123px 123px;
-    gap: 20px;
+    gap: 20px;    
+    padding: 0;
+    margin: 0;
+    list-style: none;
     margin-top: 60px;
+    margin-bottom: 30px;
 }
 
 .perforators {
@@ -208,6 +221,7 @@ img {
 .logo {
     background-color: var(--basic-red);
     color: inherit;
+    box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
 }
 
 .logo:focus {
@@ -254,6 +268,9 @@ img {
 .logo-text {
     font-size: 16px;
     line-height: 23px;
+    text-align: left;
+    width: 280px;
+    margin-left: 30px;
 }
 
 .header-phone {
@@ -265,6 +282,7 @@ img {
 .header-address {
     font-size: 14px;
     color: var(--basic-blue);
+    text-align: left;
 }
 
 .user-navigation .user-link {
@@ -292,25 +310,30 @@ img {
     color: var(--basic-blue);
 }
 
-/* site navigation */
+/* header navigation */
 
-.site-navigation, .main-footer {
+.header-navigation, .main-footer {
     background-color: var(--basic-blue);
 }
 
-.site-navigation, .promo-list, .footer-navigation-list, .footer-services-list {
+.footer-services-list {
     list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    min-width: 546px;
 }
 
-.site-navigation a {
+.header-navigation a {
     color: inherit;
 }
 
-.main-navigation a:hover {
+.header-navigation a:hover {
     background-color: var(--basic-extra-blue);
 }
 
-.main-navigation a:focus {
+.header-navigation a:focus {
     color: rgba(255, 255, 255, 0.5);
     background-color: var(--extradark-blue);
 }
@@ -420,53 +443,54 @@ img {
 
 /* популярные товары */
 
-.popular-title-wrap {
+.popular-items-top, .popular-manufacturers-top {
     background-color: var(--special-light-beige);
-    width: 940px;
     display: grid;
-    margin: 0 auto;
-    padding: 0 10px;
     grid-template-columns: 1fr min-content;
     margin-bottom: 20px;
 }
 
-.popular-title-wrap .button {
+.popular-items-top .button, .popular-manufacturers-top .button {
     width: 192px;
     height: 38px;
 }
 
 .popular-items-list {
     list-style: none;
+    margin: 0;
+    padding: 0;
+
     display: grid;
     gap: 20px;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
-    grid-template-columns: 220px 220px 220px;
+    grid-template-columns: 218px 218px 218px;
+    grid-template-rows: 316px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .img-contain {
-    max-width: 220px;
     height: 160px;
-    padding: 20px auto;
     background-color: var(--basic-white);
     margin: 0;
-  }
+}
 
-  .img-contain img {
+.img-contain img {
     padding-top: 20px;
     padding-bottom: 10px;
-    padding-left: 25px;
     object-fit: cover;
     align-self: center;
-  }
+}
+
+.popular-catalog-item {
+    grid-row: 1/-1;
+}
 
 .catalog-item {
     font-family: "PT Sans", "Arial", sans-serif;
     font-weight: bold;
     text-align: center;
     border: 1px solid #EAEAEA;
-    height: 318px;
+    min-height: 318px;
     width: 220px;
 }
 
@@ -493,13 +517,17 @@ img {
 }
 
 .popular-manufacturers-list {
-    display: grid;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    display: grid;    
     gap: 20px;
     grid-template-columns: 220px 220px 220px 220px;
     grid-template-rows: 145px 145px;
+
+    margin-top: 60px;
+    margin-bottom: 50px;
 }
 
 /* каталог */
@@ -510,7 +538,7 @@ img {
     margin: 0 auto;
     padding: 0 10px;
     gap: 20px;
-    grid-template-rows: auto min-content min-content 1fr auto;
+    grid-template-rows: auto max-content min-content 1fr 40px;
     grid-template-columns: 240px 700px;
 }
 
@@ -525,7 +553,6 @@ img {
     padding-bottom: 30px;
     grid-column: 1/3;
     grid-row: 2/3;
-    width: 940px;
 }
 
 .filter-header {
@@ -537,6 +564,15 @@ img {
     grid-column: 1/2;
     grid-template-rows: 4/5;
 }
+
+.filters fieldset {
+    padding: 0;
+    margin: 0;
+    border: none;
+    margin-bottom: 30px;
+}
+
+
 
 .sort {
     grid-column: 2/-1;
@@ -552,13 +588,14 @@ img {
 }
 
 .pagination-list {
+    margin: 0;
+    list-style: none;
     grid-column: 2/-1;
     grid-row: 5/6;
     display: flex;
-}
-
-.pagination-item {
-    padding: 10px;
+    width: max-content;
+    gap: 10px;
+    padding: 0;
 }
 
 .perforator-info {
@@ -572,12 +609,10 @@ img {
 
 .catalog-list {
     display: grid;
+    margin: 0;
+    padding: 0;
     gap: 20px;
-    grid-template-columns: auto auto auto;
-    list-style: none;
-}
-
-.pagination-list {
+    grid-template-columns: 220px 220px 220px;
     list-style: none;
 }
 
@@ -585,6 +620,12 @@ img {
     color: var(--basic-black);
     background-color: var(--basic-white);
     border: 1px solid #E5E5E5;
+    width: max-content;
+    padding: 10px 15px;
+}
+
+.pagination-item {
+    margin-top: 10px;
 }
 
 .pagination-item-current a, .pagination-item-current a:hover, .pagination-item-current a:focus {
@@ -633,25 +674,13 @@ img {
 
 /* сервисы */
 
-.services {
-    padding-top: 60px;
-}
-
 .services-bar, .perforator-bar {
     background-color: var(--special-light);
-}
-
-.services-head {
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
+    width: 100%;
 }
 
 .services-menu {
     display: grid;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
     grid-template-columns: min-content auto;
     grid-template-rows: auto;
     margin-top: 60px;
@@ -659,8 +688,6 @@ img {
 
 .services-buttons {
     display: grid;
-    margin: 0 auto;
-    padding: 0 10px;
     grid-template-columns: 240px;
     grid-template-rows: 61px 61px 61px;
     margin-right: 50px;
@@ -701,11 +728,8 @@ img {
     line-height: 18px;
 }
 
-.company-contacts-wrap {
+.index-column {
     display: grid;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
     grid-template-columns: 1fr 300px;
     margin-top: 70px;
     column-gap: 180px;
@@ -731,7 +755,7 @@ img {
     font-size: 13px;
 }
 
-.filter-header, .price-range input, .sort {
+.filter-header, .price-range, .sort {
     background-color: var(--basic-beige);
 }
 
@@ -766,50 +790,64 @@ img {
 
 /* футер */
 
-.footer-navigation, .footer-address {
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
-
 .footer-bar {
     background-color: var(--basic-blue);
+    width: 100%;
 }
 
 .footer-social-bar {
     background-color: var(--basic-extra-blue);
+    width: 100%;
+}
+
+.footer-address {
+    display: flex;
+    justify-content: space-between;
+    
+    align-items: center;
+    margin-bottom: 40px;
 }
 
 .footer-copyright {
-    display: grid;
-    width: 940px;
-    margin: 0 auto;
-    padding: 0 10px;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.footer-navigation {
-    display: grid;
-    grid-template-columns: 220px 1f;
-    grid-template-rows: 68px;
+    display: flex;
     justify-content: space-between;
 }
 
-.main-footer-logo {
+.copyright {
+    width: 330px;
+}
+
+.footer-navigation {
     display: flex;
+    justify-content: space-between;
+    height: 68px;
+}
+
+.main-footer-logo {
     width: 220px;
     height: 68px;
     grid-row: 1/-1;
 }
 
 .footer-navigation-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
     display: flex;
-    grid-row: 1/-1;
-    gap: 20px;
+    min-width: 546px;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .footer-navigation-list a {
     color: var(--special-light);
+}
+
+.footer-links {
+    display: flex;
+    width: 350px;
+    justify-content: space-between;
 }
 
 .footer-navigation-list a:hover, .footer-services-list a:hover, .footer-links a:hover {
@@ -854,8 +892,8 @@ img {
 
 .hidden {
     position: absolute;
-	clip: rect(0 0 0 0);
-	width: 1px;
-	height: 1px;
-	margin: -1px;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
 }
